# static-markdown-wiki

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
static_markdown_wiki/: main.py
static_markdown_wiki/theme/: folder_listing.html  style.css
templates/: base.html
